# ideaWeaver

./: .gitignore  README.md  main.py  pyproject.toml
agents/: character_creator.py  character_name_generator.py  narrative_nudger.py  title_generator.py  world_builder.py
backend/: api.py  main.py
backend/agents/: character_name_generator.py  idea_weaver_master.py  name_generator_agent.py  summary_writer.py  title_generator.py  title_generator_agent.py
backend/prompts/: character_creator_prompt.py  character_name_generator_prompt.py  master_agent_follow_up_prompt.py  master_agent_initial_prompt.py  narrative_nudger_prompt.py  story_summary_prompt.py  title_generator_prompt.py  world_builder_prompt.py
backend/utils/: llm_loader.py  markdown_builder.py  master_agent_tools.py  prompt_templates.py  save_to_markdown.py  startup_checker.py
frontend/: api_client.py  app.py  ui.py
utils/: llm_loader.py  markdown_builder.py  prompt_templates.py  save_to_markdown.py  startup_checker.py
