[project]
name = "idea-weaver"
version = "0.1.0"
description = "A multi-agent application for creative story development."
requires-python = ">=3.8"
dependencies = [
  "crewai>=0.25.5",
  "ollama>=0.1.7",
  "langsmith>=0.1.26",
  "python-dotenv>=1.0.1",
  "pydantic>=2.0.0",
  "streamlit>=1.30.0",
  "requests>=2.31.0",
  "fastapi",
  "uvicorn",
  "crewai_tools>=0.1.8",
]

[tool.setuptools.packages.find]
include = ["backend*", "frontend*", "backend.agents*", "backend.utils*", "backend.prompts*"]
